# rafa

./: .env  .gitignore  CODEOWNERS  Dockerfile.data_loader_service  Dockerfile.intermediary_server  Dockerfile.ollama  Dockerfile.streamlit_app  Dockerfile.websocket  README.md  app.py  docker-compose.yml  embeddings.sh  pyproject.toml  run_rafa.sh
rafa/: main.py
rafa/apps/: space_force_ai.py
rafa/apps/semantic_studio/: semantic_studio.py
rafa/apps/space_force/: space_force_ai.py
rafa/assitants/: multi_assistant_sample.py
rafa/crew/: trip_agents.py
rafa/data/: data_vector_service.py
rafa/data/allen/docs/: FAQ.md
rafa/data/allen/docs/adrs/: 0001-use-adrs.md
rafa/data/allen/docs/base-checks/: api-component-relation.md
rafa/data/allen/docs/team-management/: overview.md
rafa/data/allen/docs/techdocs/: faq.md
rafa/data/api_management/: lint-asyncapi.md
rafa/data/api_management/docs/user_templates/: APIsGenericInfo.md
rafa/data/chroma_db/: chroma.sqlite3
rafa/data/collections/allen/: README.md
rafa/data/collections/api_management/: lint-openapi.md
rafa/data/collections/api_management/docs/: index.md
rafa/data/collections/rafa/: CONTRIBUTING.md  README.md
rafa/data/vector_db/: docstore.json  index_store.json
rafa/data_load/: data_loader.py
rafa/embedding/: embedding_generator.py  embedding_manager.py
rafa/file_upload/: file_handler.py  image_handler.py  text_handler.py  video_handler.py
rafa/indexing/: vector_store_indexing.py
rafa/intermediary_server/: http_websocket_bridge.py
rafa/kernel/: __init__.py
rafa/prompts/: default_prompts.py
rafa/storage/: context_storage.py
rafa/streamlit_app/: chat_app.py  friday.py
rafa/vector_db/: docstore.json  index_store.json
rafa/websocket/: websocket_client.py  websocket_server.py
(+30 files in other folders)
