[tool.poetry]
name = "rafa"
version = "0.1.0"
description = "python backend service to implement RAG and create AI assistants"
authors = ["rajnavakoti <rajnavakoti@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.31.0"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
pytest = "^8.0.1"
aiohttp = "^3.9.3"
streamlit = "^1.31.1"
llama-index = {git = "https://github.com/jerryjliu/llama_index.git"}
llama-index-readers-file = "^0.1.4"
sentence-transformers = "^2.4.0"
llama-index-embeddings-huggingface = "^0.1.3"
pyautogen = "^0.2.15"
ipython = "^8.22.1"
crewai = "^0.16.2"
pypdf = "^4.0.2"
langchain = "^0.1.9"
duckduckgo-search = "^4.5.0"
unstructured = "^0.12.5"
llama-index-llms-ollama = "^0.1.3"
certifi = "^2024.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"